feat: Added pkg, network and mount commands to swagger, openapi. Fixed vlanid to network model.
